# Rubik-s-Cube

./: CMakeLists.txt  README.md
lib/: Makefile  cmake_install.cmake
lib/glew-cmake/: Makefile  cmake_install.cmake
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/docs/: Makefile  cmake_install.cmake
lib/glfw/src/: Makefile  cmake_install.cmake
src/: CubePart.cpp  CubePart.hpp  RubikCube.cpp  RubikCude.hpp  Shader.cpp  Shader.hpp  Solution.cpp  Window.cpp  Window.hpp  main.cpp
src/shaders/: back.glslf  bottom.glslf  inside.glslf  left.glslf  main.glslv  right.glslf  top.glslf
